# ram-observer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/components/: actions.rs  config_handler.rs  constants.rs  event_handler.rs  memory_management.rs  mod.rs  monitor.rs  structs.rs  ui.rs  utils.rs
